membuat image controller
