# main.go
@@ -25,6 +25,10 @@ func main() {
 	boardingService := service.NewBoardingService(boardingRepository, db, validate)
 	boardingController := controller.NewBoardingController(boardingService)
 
+	imageRepository := repository.NewImageRepository()
+	imageService := service.NewImageService(imageRepository, boardingRepository, db, validate)
+	imageController := controller.NewImageController(imageService)
+
 	router := httprouter.New()
 
 	router.GET("/api/user", userController.FindAll)
@@ -38,6 +42,13 @@ func main() {
 	router.GET("/api/boarding/:boardingId", boardingController.FindBoardingById)
 	router.PUT("/api/boarding/:boardingId", boardingController.UpdateBoarding)
 	router.DELETE("/api/boarding/:boardingId", boardingController.DeleteBoarding)
+
+	router.GET("/api/boarding/:boardingId/image", imageController.FindAllImage)
+	router.POST("/api/boarding/:boardingId/image", imageController.CreateImage)
+	router.DELETE("/api/boarding/:boardingId/image", imageController.DeleteImage)
+	router.GET("/api/boarding/:boardingId/image/:imageId", imageController.FindImageById)
+	router.PUT("/api/boarding/:boardingId/image/:imageId", imageController.UpdateImage)
+	router.DELETE("/api/boarding/:boardingId/image/:imageId", imageController.DeleteImageById)
 
 	router.PanicHandler = exception.ErrorHandler
 
